<resources>
    <string name="app_name">sy95306</string>
    <string name="please_select_station">请选择车站</string>
    <string name="train_type">列车车型：</string>
    <string name="action_date">开行日期：</string>
    <string name="search">查询</string>
    <string name="tip_search">查询结果仅供参考，具体信息请以车站公告为准</string>
    <string name="title_second">按列车车次-时刻查询</string>
    <string name="train_code">列车车次：</string>
    <string name="first_title">按发到站-时刻余票查询</string>
    <string name="start_station_name">出发站</string>
    <string name="end_station_name">终到站</string>
    <string name="all_type">全部</string>
    <string name="start_time">出发时间</string>
    <string name="spend_time">运行时间</string>
    <string name="end_time">到达时间</string>
    <string name="filter">过滤</string>
    <string name="G1">G1</string>
    <string name="order">站序</string>
    <string name="station_name">站名</string>
    <string name="remain_time">停留</string>
    <string name="arrive_time">到时</string>
    <string name="leave_time">发时</string>
    <string name="string_return">返回</string>
    <string name="string_refresh">刷新</string>
    <string name="d7412">D7412</string>
    <string name="shen_yang_bei">沈阳北</string>
    <string name="hint_input_station">中文/拼音/首字母</string>
    <string name="bei_jing">北京</string>
    <string name="price_test_shangwu">商务座:2724.0元</string>
    <string name="price_test_yideng">一等座:270.5元</string>
    <string name="price_test_erdeng">二等座:181.5元</string>
    <string name="init_data">初始化中，请稍候…</string>
    <string name="textView_loading">加载中，请稍候</string>
    <string name="station_start">始</string>
    <string name="station_pass">过</string>
    <string name="station_end">终</string>
    <string name="save">保存</string>
    <string name="share">分享</string>
    <string name="zhan_zhan">站站</string>
    <string name="che_ci">车次</string>
    <string name="all_price">%1$s %2$s %3$s %4$s</string>

</resources>
