<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DetailFragment">

    <TextView
        android:id="@+id/textView_second_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_bg"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/title_second"
        android:textColor="#fff"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lly_train_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/lly_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_second_title">

        <TextView
            android:id="@+id/textView_train_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:text="@string/train_code"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/show_textView_train_number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="40" />

        <EditText
            android:id="@+id/show_textView_train_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/G1"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/textView_train_number"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lly_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lly_train_number">

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:text="@string/action_date"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button_select_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="40" />

        <Button
            android:id="@+id/button_select_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/textView_date"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="20190104" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/button_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/query"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/lly_date" />


</android.support.constraint.ConstraintLayout>